# mnist-ffn-numpy

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  entrypoint.sh  exp.json  load_and_predict.py  main.py  pyproject.toml  train.py  train_exp.py  utils.py
activations/: activations.py
data/: loader.py  mnist_loader.py
layers/: linear.py
loss/: entropy_loss.py
model/: neural_network.py
optmizer/: optim.py
tests/: test_activations.py  test_layer.py  test_training.py
trainer/: train.py
